Make this work with unicode names.  It's wrong, I'm sure, but this seems to work.

--- a/get-pod.conf.example
+++ b/get-pod.conf.example
@@ -1,3 +1,5 @@
+#!/usr/bin/python
+# coding=UTF-8
 
 # This is an example conf file, you may want to start by just renaming it
 # to remove the example extention.
